Header alignment fixup

--- a/src/style.css
+++ b/src/style.css
@@ -76,7 +76,7 @@ a.brand span {
 .navbar-inner > .container-fluid {
     padding-right: 10px;
     padding-left: 20px;
-    padding-top: 9px;
+    padding-top: 8px;
     position: relative;
 
 }
@@ -362,7 +362,7 @@ a.brand span {
 
 #btn-run-process {
   display: none;
-  margin-top: 4px;
+  margin-top: 0px;
 }
 
 #workspace, #palette, #sidebar {
